# RadiologyTrustLayer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
core/: config.py
core/audit_trail/: events.py
core/batch/: parse_zip.py  runner.py
core/db/: db.py  repo.py  schema.sql
core/pipeline/: audit_pipeline.py  medgemma_client.py
core/pipeline/prompts/v1/: alignment.md  claim_extraction.md  clinician_summary.md  image_findings.md  patient_explain.md  rewrite.md
core/pipeline/schemas/: alignment.schema.json  claim_extraction.schema.json  clinician_summary.schema.json  image_findings.schema.json  patient_explain.schema.json  rewrite.schema.json
core/scoring/: score.py
core/util/: files.py  hashing.py  ids.py  time.py  validation.py
eval/: rubric.md
eval/sample_outputs/: mock_results.json
hf_lora/: README_MODEL_CARD.md  train_lora.py
hf_lora/configs/: lora_json.schema.yaml  lora_uncertainty.yaml
hf_lora/dataset/: format.py  make_synthetic.py
hf_lora/eval/: eval_lora_before_after.py
hf_lora/publish/: push_to_hf.py
kaggle/: rtl_lora_training.ipynb
scripts/: init_space_storage.py  smoke_test.py
spaces_app/: app.py
spaces_app/ui/: components.py  render_report.py
spaces_app/ui/data/examples/: manifest.json
spaces_app/ui/data/examples/case_cxr_01/: report.txt
spaces_app/ui/data/examples/case_cxr_02/: report.txt
spaces_app/ui/pages/: audit_detail.py  batch_audit.py  evaluation.py  history.py  home.py  login.py  settings.py  single_audit.py
video/: script.md  stroyboard.md
(+1 files in other folders)
