[project]
name = "radiology-trust-layer"
version = "1.0.0"
description = "MedGemma-powered radiology report auditing system"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

[project.urls]
Homepage = "https://huggingface.co/spaces/YOUR_HF_USERNAME/radiology-trust-layer"
Repository = "https://github.com/YOUR_GH_USERNAME/radiology-trust-layer"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "spaces_app*", "scripts*"]
